# satctrl

./: Cargo.toml  build.rs
src/: duration.rs  instant.rs  itrfcoord.rs  lib.rs  scerror.rs
src/basemath/: matherr.rs  matrix.rs  matrixops.rs  matrixutils.rs  matutils.rs  mod.rs  quaternion.rs
src/basemath/ode/: mod.rs  odestate_matrix.rs  rk_explicit.rs  rkts54.rs  rkv65.rs  rkv87.rs  rkv98.rs  rkv98_nointerp.rs  types.rs
src/filters/: ukf.rs
src/frametransform/: mod.rs
src/time/: duration.rs  err.rs  instant.rs  instant_ops.rs  instantparse.rs  mod.rs  time_err.rs  timescale.rs
src/types/: mod.rs
src/utils/: mod.rs
